# Complete-Striped-Smith-Waterman-Library

./: AUTHORS  ChangeLog  NEWS  configure.ac
src/: Makefile  Makefile.am
